# indusense_ml

./: .env.example  .gitignore  README.md  b1_explore.ipynb  pyproject.toml
alembic/: env.py
alembic/versions/: 20260507_0001_init_bronze_silver_gold.py  20260512_0002_add_gold_rolling_windows.py
artifacts/data-ingestion/20260507122835/: imputation_decisions.csv  imputation_metrics.csv  overview.csv
artifacts/data-ingestion/20260507125000/: deduplication_summary.csv  report.md  temperature_normalization_windows.csv
src/indusense/: __init__.py
src/indusense/core/: __init__.py  logging.py  settings.py
src/indusense/db/: __init__.py  base.py  models.py  session.py
src/indusense/processing/: __init__.py  ingestion.py  reporting.py
src/indusense/schemas/: __init__.py  ingestion.py
